cmake_minimum_required(VERSION 3.26)
project(Data_Structure_Cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Structure_Cpp main.cpp)

add_executable(Array Linklist/Array.cpp)
add_executable(Linklist Linklist/Linklist.cpp)
add_executable(RingLinklist Linklist/RingLinklist.cpp)
add_executable(SeStack Stack/SeStack.cpp)
add_executable(LinkStack Stack/LinkStack.cpp)
add_executable(ArrayQueue Queue/ArrayQueue.cpp)
add_executable(LinkQueue Queue/LinkQueue.cpp)
add_executable(Tree Tree/Tree.cpp)
add_executable(LevelOrder Tree/LevelOrder.cpp)
add_executable(AL_BFS_DFS Graph/AL_BFS_DFS.cpp)
add_executable(AM_BFS_DFS Graph/AM_BFS_DFS.cpp)
add_executable(List List/List.cpp)
add_executable(BubbleSort Sort/BubbleSort.cpp)
add_executable(InsertSort Sort/InsertSort.cpp)
add_executable(HeapSort Sort/HeapSort.cpp)